feat(category): 카테고리 봇
